EA-2891 Cleanup